SalesForce/Assignment_2/Assignment2/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>YEAR( TODAY() ) - YEAR( DOB__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First name of user</description>
        <label>FirstName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_Male_Students</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>M</value>
        </filters>
        <label>View Male Students</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOB_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>DOB__c &gt; Today()</errorConditionFormula>
        <errorDisplayField>DOB__c</errorDisplayField>
        <errorMessage>Date of Birth inserted is invalid</errorMessage>
    </validationRules>
</CustomObject>